Day 8 junit tests